--- a/templates/company-quotes.html.twig
+++ b/templates/company-quotes.html.twig
@@ -7,11 +7,16 @@
         .wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
         .wrapper table, tr, td, thead, tbody { margin: 0; border: 2px solid #bbb; border-collapse: collapse; }
         .wrapper td { padding: 4px; }
+        .wrapper .chart-container { margin-bottom: 1.33em; }
     </style>
 
     <div class="wrapper">
         <h1>Quotes for {{ company.companyName }}</h1>
         <h4>From {{ fromDate.format('Y-m-d') }} to {{ toDate.format('Y-m-d') }}</h4>
+
+        <div class="chart-container">
+            <canvas id="chart"></canvas>
+        </div>
 
         <table>
             <thead>
@@ -42,4 +47,45 @@
             </tbody>
         </table>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function(event) {
+            const datasetOpen = {
+                label: 'Open price',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(75, 192, 192)',
+                tension: 0.1,
+            };
+            const datasetClose = {
+                label: 'Close price',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(240, 150, 150)',
+                tension: 0.1
+            };
+            const labels = [];
+
+            {% for quote in quotes %}
+            datasetOpen.data.push({{ quote.open }});
+            datasetClose.data.push({{ quote.close }});
+            labels.push('{{ quote.date|date('Y-m-d') }}');
+            {% endfor %}
+
+            const config = {
+                type: 'line',
+                data: {
+                    labels,
+                    datasets: [ datasetOpen, datasetClose ]
+                },
+                options: {}
+            };
+
+            const chart = new Chart(
+                document.getElementById('chart'),
+                config
+            );
+        });
+    </script>
 {% endblock %}
