--- a/templates/company-quotes.html.twig
+++ b/templates/company-quotes.html.twig
@@ -6,7 +6,10 @@
     <style>
         .wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
         .wrapper table, tr, td, thead, tbody { margin: 0; border: 2px solid #bbb; border-collapse: collapse; }
+        .wrapper table { width: 100%; }
         .wrapper td { padding: 4px; }
+        .wrapper thead td { text-align: center; background-color: #aaa; }
+        .wrapper tbody tr:nth-child(even) {background-color: #ddd;}
         .wrapper .chart-container { margin-bottom: 1.33em; }
     </style>
 
